# managing-complexity-with-clean-code

./: README.md
code/01-introduction/: cat.c
code/02-identifying-complexity/01-metrics/01-friction/: branch.ts
code/02-identifying-complexity/01-metrics/02-lines-of-code/: SecurityAdvancedAccessControlItemFactory.cs
code/02-identifying-complexity/01-metrics/04-cognitive-complexity/: GracefulShutdown.java
code/02-identifying-complexity/01-metrics/06-indentation-complexity/: utils.js
code/02-identifying-complexity/03-cyclomatic-complexity/: training_arrays_v1.py
code/02-identifying-complexity/05-abc-complexity/: sanitization.rb
code/03-reducing-complexity/03-important-refactorings/01-extract-method-or-function/: README.md
code/03-reducing-complexity/03-important-refactorings/01-extract-method-or-function/sandbox/: pyproject.toml
code/03-reducing-complexity/03-important-refactorings/01-extract-method-or-function/sandbox/sandbox/: __init__.py
code/03-reducing-complexity/03-important-refactorings/01-extract-method-or-function/sandbox/tests/: test_diagram_sentence.py
code/03-reducing-complexity/03-important-refactorings/02-rename-method-or-function-variable/: README.md
code/03-reducing-complexity/03-important-refactorings/03-replace-conditional-with-polymorphism/: README.md
code/03-reducing-complexity/04-read-by-refactoring/: README.md
code/03-reducing-complexity/read-by-refactoring/: README.md
exercises/read-by-refactoring/: README.md
exercises/read-by-refactoring/dateutil/: tox.ini
(+38 files in other folders)
